# camuy

./: .gitignore  COPYING  LICENSE  README.md  build.sh
models/: imagenet_utils.py
models/LQ_Nets/: LICENSE  densenet_model.py  googlenet_model.py  imagenet.py  resnet_model.py
models/alexnet/: alexnet.py
models/efficientnet/: LICENSE  efficientnet_b0.py  efficientnet_builder.py  efficientnet_layers.py  efficientnet_model.py  main.py  mb_conv.py
models/efficientnet/edgetpu/: efficientnet_edgetpu_builder.py
models/inception_bn/: inception_bn.py
models/mobilenet_v3/: LICENSE  conv_blocks.py  generate_cycle_count_heatmap.py  generate_data_movement_cost_heatmap.py  generate_heatmaps_small_combined.py  generate_scatterplots_small_combined.py  mobilenet.py  mobilenet_tensorpack.py  mobilenet_v3.py  mobilenet_v3_tensorpack.py
models/proxylessnas/: eval.py  tf_layers.py  tf_model_zoo.py  tf_modules.py  utils.py
models/resnext/: LICENSE  resnext.py  resnext_model.py
models/vgg16/: vgg16.py
mpu_simulator/: CMakeLists.txt  DefaultFlags.cmake  LICENSE  doxyfile
mpu_simulator/include/: accumulator_array.h  activation_fifo.h  matrix_processing_unit.h  memory_management_unit.h  mpu_exception.h  mpu_statistics_log_entry.h  mpu_statistics_logger.h  processing_element.h  processing_element_center.h  processing_element_left_border.h  processing_element_top_border.h  systolic_array.h  systolic_data_setup_unit.h  weight_fetcher.h
mpu_simulator/test/: mpu_simulator_test.cpp
mpu_visualizer/: CMakeLists.txt  DefaultFlags.cmake
mpu_visualizer/include/: accumulator_array.h  activation_fifo.h  matrix_processing_unit.h  memory_management_unit.h  mpu_exception.h  mpu_visualizer_global_constants.h  processing_element.h  processing_element_center.h  processing_element_left_border.h  processing_element_top_border.h  systolic_array.h  systolic_data_setup_unit.h  weight_fetcher.h
mpu_visualizer/src/: mpu_visualizer.cpp
mpusim_conv2d/: CMakeLists.txt  DefaultFlags.cmake  LICENSE  LICENSE_TENSORFLOW  LICENSE_TENSORPACK  MpuSimConv2D.py  MpuSimConv2D_gradient.py  mpusim_conv2d.cpp  mpusim_conv2d.py  mpusim_conv2d_gradient.py
mpusim_depthwise_conv2d/: LICENSE  mpusim_depthwise_conv2d.py  mpusim_depthwise_convolution2d.py
mpusim_fc/: CMakeLists.txt  LICENSE_TENSORFLOW  MpuSimFc.py  MpuSimFullyConnected.py  MpuSimMatMul_gradient.py  mpusim_fc.py  mpusim_fully_connected.py  mpusim_mat_mul.cpp  mpusim_mat_mul_gradient.py
mpusim_separable_conv2d/: mpusim_separable_conv2d.py  mpusim_separable_conv2d_op_impl.py  mpusim_separable_conv2d_tensorpack.py  mpusim_separable_convolution2d.py  separable_conv2d_op_impl.py
mpusim_slim/: conv2d.py
mpusim_wrapper/: CMakeLists.txt  DefaultFlags.cmake  LICENSE  mpusim_wrapper.cpp  mpusim_wrapper.h
tensorflow/google/protobuf/: map.h
tensorflow/tensorflow/cc/ops/: training_ops.h
tensorflow/tensorflow/compiler/tf2xla/cc/ops/: xla_jit_ops.h
tensorflow/tensorflow/compiler/xla/service/: hlo_profile_printer_data.pb.h
tensorpack_models/: imagenet_utils.py
tensorpack_models/LQ_Nets/: densenet_model.py  googlenet_model.py  imagenet.py  imagenet_utils.py  resnet_model.py
tensorpack_models/alexnet/: alexnet.py
tensorpack_models/inception_bn/: inception_bn.py
tensorpack_models/vgg16/: LICENSE  vgg16.py
